Allow submatch by single record